remocao consoles, alteracoes de texto

--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <div *ngIf=finished class="quizz_results">
-    <h1>O Seu resultado é:</h1>
+    <h1>Analisando suas escolhas,</h1>
     <p>{{answerSelected}}</p>
   </div>
 </div>
